# postgres-entity-generator

./: .gitignore  Cargo.toml  README.md  cli.yml
src/: main.rs  types.rs
src/dialects/: mod.rs
src/dialects/py_sqlalchemy/: entity.py.tera  mod.rs
src/dialects/ts_typeorm/: entity.ts.tera  mod.rs
