[package]
name = "peg"
version = "0.1.0"
authors = ["Morreski <contact@enguerrand.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.1", features = ["yaml"]}
postgres = "0.17.4"
tera = "1.3.1"
serde = {version = "^1", features = ["derive"]}
